# salomon

./: .gitignore  README.md  how_to_package.md  setup.cfg
sm_api/model_package_create_vs_describe/: create.py  describe.py
src/salomon/: __init__.py
src/salomon/impl/: CopyModelPackage.py  ecr_helper.py
tests/: test_copy_model_between_accounts.py  test_copy_sample_model.py  test_list_images.py
