[metadata]
name = salomon
version = 0.0.1
author = bezalelsoft
# author_email = author@example.com
description = Sage mAker modeL cOpy froM One account to aNother
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bezalelsoft/salomon
project_urls =
    Bug Tracker = https://github.com/bezalelsoft/salomon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    requests

tests_require =
    fastapi
    uvicorn

[options.packages.find]
where = src